--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Rivo-Car/aleannlab-test-task#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "mime-types": "^2.1.35"
   }
 }
