--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "dependencies": {
     "express": "^4.18.2",
     "mime-types": "^2.1.35"
+  },
+  "devDependencies": {
+    "eslint": "^8.27.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
