--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,10 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
-    "extends": "standard",
+    "extends": "airbnb-base",
     "overrides": [
     ],
     "parserOptions": {
