--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "aleannlab-test-task",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node src/index.js",
+    "compile": "tsc",
+    "start": "node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "lint": "eslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,11 +27,16 @@
     "mime-types": "^2.1.35"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
     "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
