--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "compile": "tsc",
-    "start": "node src/index.ts",
+    "start": "node dist/index.ts",
     "dev": "nodemon src/index.ts",
     "lint": "eslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
