--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "compile": "tsc",
-    "start": "node dist/index.ts",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "lint": "eslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,10 +21,8 @@
   },
   "homepage": "https://github.com/Rivo-Car/aleannlab-test-task#readme",
   "dependencies": {
-    "bootstrap": "^5.2.2",
     "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "mime-types": "^2.1.35"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
