--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "homepage": "https://github.com/Rivo-Car/aleannlab-test-task#readme",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sanitize-html": "^2.7.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "@types/sanitize-html": "^2.6.2",
     "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.0.0",
